--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HW0: Welcome to CS193X</title>
+    <title>Welcome to Web Programming Fall </title>
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <h1>HW0: Welcome to CS193X</h1>
 
-    <h2>What is your name?</h2>
+    <h2>What is your batch?</h2>
     <p>
       Liong Way Wen ,also can call me liong liong
     </p>
